<resources>
    <string name="app_name">Exercise02</string>
    <string name="description">Press any button to start</string>
    <string name="author">Bogusława Tlołka</string>
    <string name="buttons">Buttons</string>
    <string name="bmi">BMI</string>
    <string name="relative">Relative</string>
    <string name="person_radio">Person</string>
    <string name="flower_radio">Flower</string>
    <string name="hello">Hello!</string>
    <string name="toast">Toast</string>
    <string name="back">back</string>
    <string name="no_picture">No picture</string>
    <string name="visible">Text visible</string>
    <string name="invisible">Text invisible</string>
    <string name="name">Name</string>
    <string name="mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="empty">Enter weight and height</string>
</resources>